--- a/index.html
+++ b/index.html
@@ -9,5 +9,21 @@
     <link rel="stylesheet" href="assets/css/responsive.css" />
     <link rel="stylesheet" href="assets/css/typography.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="nav">
+      <h1 class="logo"><a href="index.html">Site-Title</a></h1>
+
+      <ul class="main-nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="employees.html">Our Crew</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <main>
+      <header></header>
+    </main>
+    <footer>
+      <p>&copy; 2024 Mo Sharma</p>
+    </footer>
+  </body>
 </html>
