--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <header></header>
     </main>
     <footer>
-      <p>&copy; 2024 Mo Sharma</p>
+      <h1>&copy; 2024 Mo Sharma</h1>
     </footer>
   </body>
 </html>
