end of day commit

--- a/employees.html
+++ b/employees.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Crew</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/logo.svg" />
     <link rel="stylesheet" href="assets/css/nav.css" />
     <link rel="stylesheet" href="assets/css/typography.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
@@ -21,86 +22,88 @@
     </nav>
     <main>
       <header></header>
-      <div class="responsive">
-        <div class="gallery">
-          <a target="" href="assets/img/emp1.avif">
-            <img src="assets/img/emp1.avif" alt="Employee-1" />
-          </a>
-          <div class="desc">Add a description of the image here</div>
+      <section>
+        <div class="responsive">
+          <div class="gallery">
+            <a target="" href="assets/img/emp1.avif">
+              <img src="assets/img/emp1.avif" alt="Employee-1" />
+            </a>
+            <div class="desc">Add a description of the image here</div>
+          </div>
         </div>
-      </div>
 
-      <div class="responsive">
-        <div class="gallery">
-          <a target="_blank" href="assets/img/emp2.avif">
-            <img src="assets/img/emp2.avif" alt="Employee-2" />
-          </a>
-          <div class="desc">Add a description of the image here</div>
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="assets/img/emp2.avif">
+              <img src="assets/img/emp2.avif" alt="Employee-2" />
+            </a>
+            <div class="desc">Add a description of the image here</div>
+          </div>
         </div>
-      </div>
 
-      <div class="responsive">
-        <div class="gallery">
-          <a target="_blank" href="assets/img/emp3.avif">
-            <img src="assets/img/emp3.avif" alt="Employee-3" />
-          </a>
-          <div class="desc">Add a description of the image here</div>
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="assets/img/emp3.avif">
+              <img src="assets/img/emp3.avif" alt="Employee-3" />
+            </a>
+            <div class="desc">Add a description of the image here</div>
+          </div>
         </div>
-      </div>
 
-      <div class="responsive">
-        <div class="gallery">
-          <a target="_blank" href="assets/img/emp4.avif">
-            <img src="assets/img/emp4.avif" alt="Employee-4" />
-          </a>
-          <div class="desc">Add a description of the image here</div>
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="assets/img/emp4.avif">
+              <img src="assets/img/emp4.avif" alt="Employee-4" />
+            </a>
+            <div class="desc">Add a description of the image here</div>
+          </div>
         </div>
-      </div>
 
-      <div class="responsive">
-        <div class="gallery">
-          <a target="_blank" href="assets/img/emp5.avif">
-            <img src="assets/img/emp5.avif" alt="Employee-5" />
-          </a>
-          <div class="desc">Add a description of the image here</div>
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="assets/img/emp5.avif">
+              <img src="assets/img/emp5.avif" alt="Employee-5" />
+            </a>
+            <div class="desc">Add a description of the image here</div>
+          </div>
         </div>
-      </div>
 
-      <div class="responsive">
-        <div class="gallery">
-          <a target="_blank" href="assets/img/emp6.avif">
-            <img src="assets/img/emp6.avif" alt="Employee-6" />
-          </a>
-          <div class="desc">Add a description of the image here</div>
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="assets/img/emp6.avif">
+              <img src="assets/img/emp6.avif" alt="Employee-6" />
+            </a>
+            <div class="desc">Add a description of the image here</div>
+          </div>
         </div>
-      </div>
 
-      <div class="responsive">
-        <div class="gallery">
-          <a target="_blank" href="assets/img/emp7.avif">
-            <img src="assets/img/emp7.avif" alt="Employee-7" />
-          </a>
-          <div class="desc">Add a description of the image here</div>
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="assets/img/emp7.avif">
+              <img src="assets/img/emp7.avif" alt="Employee-7" />
+            </a>
+            <div class="desc">Add a description of the image here</div>
+          </div>
         </div>
-      </div>
 
-      <div class="responsive">
-        <div class="gallery">
-          <a target="_blank" href="assets/img/emp8.avif">
-            <img src="assets/img/emp8.avif" alt="Employee-8" />
-          </a>
-          <div class="desc">Add a description of the image here</div>
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="assets/img/emp8.avif">
+              <img src="assets/img/emp8.avif" alt="Employee-8" />
+            </a>
+            <div class="desc">Add a description of the image here</div>
+          </div>
         </div>
-      </div>
 
-      <div class="responsive">
-        <div class="gallery">
-          <a target="_blank" href="assets/img/emp09.avif">
-            <img src="assets/img/emp09.avif" alt="Employee-9" />
-          </a>
-          <div class="desc">Add a description of the image here</div>
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="assets/img/emp9.avif">
+              <img src="assets/img/emp9.avif" alt="Employee-9" />
+            </a>
+            <div class="desc">Add a description of the image here</div>
+          </div>
         </div>
-      </div>
+      </section>
     </main>
     <footer>
       <h1>&copy; 2024 Mo Sharma</h1>
