--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final-Project</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/logo.svg" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/nav.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
@@ -12,7 +13,7 @@
   <body>
     <nav class="nav">
       <h1 class="logo">
-        <a href="index.html">Site-Title</a>
+        <a href="index.html"> Site-Title </a>
       </h1>
 
       <ul class="main-nav">
@@ -25,6 +26,7 @@
         <li style="padding: 0.5rem 1rem"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+
     <main>
       <header></header>
     </main>
