--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,15 @@
     <main>
       <header></header>
     </main>
-    <footer>
+    <footer class="footer">
+      <nav class="footer-nav">
+        <ul class="foot-nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="employees.html">Our Crew</a></li>
+          <li class="current"><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <hr />
       <h1>&copy; 2024 Mo Sharma</h1>
     </footer>
   </body>
