--- a/employees.html
+++ b/employees.html
@@ -26,7 +26,7 @@
         <div class="responsive">
           <div class="gallery">
             <a target="" href="assets/img/emp1.avif">
-              <img src="assets/img/emp1.avif" alt="Employee-1" />
+              <img src="assets/img/emp1.avif" alt="Employee-1" action="none" />
             </a>
             <div class="desc">Add a description of the image here</div>
           </div>
@@ -106,6 +106,14 @@
       </section>
     </main>
     <footer>
+      <nav class="footer-nav">
+        <ul class="foot-nav">
+          <li><a href="index.html">Home</a></li>
+          <li class="current"><a href="employees.html">Our Crew</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <hr />
       <h1>&copy; 2024 Mo Sharma</h1>
     </footer>
   </body>
