--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
       <header></header>
     </main>
     <footer>
+      <nav class="footer-nav">
+        <ul class="foot-nav">
+          <li class="current"><a href="index.html">Home</a></li>
+          <li><a href="employees.html">Our Crew</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <hr />
       <h1>&copy; 2024 Mo Sharma</h1>
     </footer>
   </body>
