commiting for testing gh pages

--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
       <h1 class="logo"><a href="index.html">Site-Title</a></h1>
 
       <ul class="main-nav">
-        <li style="padding: 0.5rem 1rem"><a href="index.html">Home</a></li>
-        <li style="padding: 0.5rem 1rem">
+        <li><a href="index.html">Home</a></li>
+        <li>
           <a href="employees.html">Our Crew</a>
         </li>
-        <li class="current"><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html" class="current">Contact</a></li>
       </ul>
     </nav>
     <main>
