--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final-Project</title>
     <link rel="icon" type="image/x-icon" href="assets/img/logo.svg" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/homepage.css" />
     <link rel="stylesheet" href="assets/css/nav.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
     <link rel="stylesheet" href="assets/css/typography.css" />
@@ -17,18 +17,41 @@
       </h1>
 
       <ul class="main-nav">
-        <li class="current">
-          <a href="index.html">Home</a>
+        <li>
+          <a href="index.html" class="current">Home</a>
         </li>
-        <li style="padding: 0.5rem 1rem">
+        <li>
           <a href="employees.html">Our Crew</a>
         </li>
-        <li style="padding: 0.5rem 1rem"><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
 
     <main>
-      <header></header>
+      <header>
+        <section>
+          <div>
+            <h2>
+              "Empowering Tomorrow, Today: Unleashing Innovation with
+              Cutting-Edge Tech Solutions"
+            </h2>
+          </div>
+          <div>
+            <h2>Tech Showcase: [Video Title]</h2>
+            <p>
+              Description: [Provide a brief description of the video content]
+            </p>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/watch?v=oXjWmyb0lYs"
+              title="Tech Showcase Video"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </section>
+      </header>
     </main>
     <footer>
       <nav class="footer-nav">
