--- a/employees.html
+++ b/employees.html
@@ -15,9 +15,9 @@
       <h1 class="logo"><a href="index.html">Site-Title</a></h1>
 
       <ul class="main-nav">
-        <li style="padding: 0.5rem 1rem"><a href="index.html">Home</a></li>
-        <li class="current"><a href="employees.html">Our Crew</a></li>
-        <li style="padding: 0.5rem 1rem"><a href="contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="employees.html" class="current">Our Crew</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <main>
