--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Final-Project</title>
     <link rel="icon" type="image/x-icon" href="assets/img/logo.svg" />
+    <title>WEBDEV Solutions</title>
     <link rel="stylesheet" href="assets/css/homepage.css" />
     <link rel="stylesheet" href="assets/css/nav.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
@@ -13,7 +13,13 @@
   <body>
     <nav class="nav">
       <h1 class="logo">
-        <a href="index.html"> Site-Title </a>
+        <a href="index.html"
+          ><img
+            src="assets/img/logo.svg"
+            alt="WEBDEV Solutions Logo"
+            class="logo-img"
+          />WEBDEV Solutions</a
+        >
       </h1>
 
       <ul class="main-nav">
@@ -30,25 +36,40 @@
     <main>
       <header>
         <section>
-          <div>
-            <h2>
-              "Empowering Tomorrow, Today: Unleashing Innovation with
-              Cutting-Edge Tech Solutions"
+          <div class="hero">
+            <h2 class="h2">
+              Empowering Tomorrow, Today: Unleashing Innovation with
+              Cutting-Edge Tech Solutions
             </h2>
+            <h3 class="h3">
+              Transforming Tomorrow: WEBDEV Solutions! Where Innovation Meets
+              Excellence.
+            </h3>
+            <div class="card">
+              <a class="button" font-size="1.45rem" href="employees.html"
+                >Get Acquainted</a
+              >
+              <a class="button" href="contact.html">Contact Us</a>
+            </div>
           </div>
           <div>
-            <h2>Tech Showcase: [Video Title]</h2>
-            <p>
-              Description: [Provide a brief description of the video content]
-            </p>
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/watch?v=oXjWmyb0lYs"
-              title="Tech Showcase Video"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+            <h2 class="h2">
+              Immerse Yourself in Innovation: Unveiling WEBDEV's Breakthrough
+              Solutions
+            </h2>
+            <h3 class="h3">A Quick Intro to Company's Services</h3>
+            <div class="iframe">
+              <iframe
+                class="video"
+                width="951"
+                height="475"
+                src="https://www.youtube.com/embed/N8YMl4Ezp4g?list=PLC3y8-rFHvwhuX4qGvFx-wPy_MEi6Jdp7"
+                title="HTML Crash Course - Tutorial for Complete Beginners"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
         </section>
       </header>
@@ -56,8 +77,12 @@
     <footer>
       <nav class="footer-nav">
         <ul class="foot-nav">
-          <li class="current"><a href="index.html">Home</a></li>
-          <li><a href="employees.html">Our Crew</a></li>
+          <li>
+            <a href="index.html" class="current">Home</a>
+          </li>
+          <li>
+            <a href="employees.html">Our Crew</a>
+          </li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
