--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li>
           <a href="employees.html">Our Crew</a>
         </li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="Review.html">Review</a></li>
       </ul>
     </nav>
 
@@ -49,7 +49,7 @@
               <a class="button" font-size="1.45rem" href="employees.html"
                 >Get Acquainted</a
               >
-              <a class="button" href="contact.html">Contact Us</a>
+              <a class="button" href="Review.html">Review Us</a>
             </div>
           </div>
           <div>
@@ -83,7 +83,7 @@
           <li>
             <a href="employees.html">Our Crew</a>
           </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="Review.html">Review</a></li>
         </ul>
       </nav>
       <hr />
